# opendevnet

./: .bazelignore  .bazelrc  .commitlintrc.json  .commitlintrc.yaml  .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.js  .eslintrc.yaml  .gitignore  .lintstagedrc  .lintstagedrc.yaml  .npmrc  .nvmrc  .prettierignore  .prettierrc  .prettierrc.yaml  .rustfmt.toml  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE.bazel  docker-compose.ci.yaml  docker-compose.ci.yml  docker-compose.development.yaml  docker-compose.development.yml  docker-compose.production.yaml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.testing.yml  environment.d.ts  nx.json  package.json  pnpm-lock.yaml  postman_collection.json  run.sh  tsconfig.base.json  tsconfig.json  (+2 more)
api/: Cargo.toml  README.md
api/migrations/: 20231029104027_init.down.sql  20231029104027_init.up.sql
api/src/: lib.rs  main.rs
api/src/routes/: mod.rs
api/src/routes/auth/: login.rs  logout.rs  mod.rs  refresh.rs  register.rs
api/src/routes/info/: mod.rs  root.rs
api/src/routes/users/: get_me.rs  list_users.rs
api/src/utils/: jwt_auth.rs  mod.rs  user.rs  ws.rs
apps/api/: Cargo.toml  handler.rs  package.json  project.json
apps/api/migrations/: 20230403142942_init.down.sql  20230403142942_init.up.sql
apps/api/src/: handler.rs  jwt_auth.rs  lib.rs  main.rs  model.rs  response.rs  route.rs  token.rs
apps/api/src/models/: auth.rs  user.rs
apps/api/src/routes/: hello_world.rs  mod.rs
apps/api/src/routes/auth/: login.rs  refresh.rs  register.rs
apps/api/src/routes/info/: healthchecker.rs  mod.rs
apps/api/src/routes/users/: list_users.rs  mod.rs
apps/api/src/utils/: jwt_auth.rs  mod.rs  user.rs  ws.rs
apps/site/: .eslintrc.js  BUILD.bazel  next.config.js  package.json  project.json  tsconfig.json
apps/site/mdx/: BUILD.bazel
apps/site/mdx/01-policies/: 02-privacy.mdx  03-accessibility.mdx  04-guidelines.mdx  index.mdx
apps/site/mdx/help/01-getting-started/: 01-introduction.mdx  02-glossary.mdx
apps/site/mdx/help/01-getting-started/04-new-users/: 01-what-are-networks.mdx
apps/site/mdx/help/03-account-settings/: 01-preferences.mdx
apps/site/mdx/help/04-automation/: 01-scheduled-messages.mdx  index.mdx
apps/site/public/: BUILD.bazel
apps/site/src/: BUILD.bazel  store.ts
apps/site/src/app/: components.tsx  error.tsx  layout.tsx  not-found.tsx  page.tsx
apps/site/src/app/(auth)/login/: LoginForm.tsx  page.tsx
apps/site/src/app/(auth)/register/: RegisterForm.tsx  page.tsx
apps/site/src/app/(none)/login/: LoginBox.tsx  LoginForm.tsx  page.tsx
apps/site/src/app/(none)/register/: RegisterBox.tsx  RegisterForm.tsx  page.tsx
apps/site/src/app/(site)/: components.tsx  layout.tsx  page.tsx
apps/site/src/app/(site)/about/: layout.tsx  page.tsx
apps/site/src/app/(site)/about/team/: page.tsx
apps/site/src/app/(site)/about/vision/: page.tsx
apps/site/src/app/(site)/accessibility/: page.tsx
apps/site/src/app/(site)/blog/: page.tsx
apps/site/src/app/(site)/changelog/: page.tsx
apps/site/src/app/(site)/contact/: ContactForm.tsx  page.tsx
apps/site/src/app/(site)/docs/: page.tsx
apps/site/src/app/(site)/feedback/: FeedbackForm.tsx  page.tsx
apps/site/src/app/(site)/guidelines/: page.tsx
apps/site/src/app/(site)/help/: page.tsx
apps/site/src/app/(site)/help/[category]/: page.tsx
apps/site/src/app/(site)/help/[category]/[subcategory]/: page.tsx
apps/site/src/app/(site)/licenses/: page.tsx
apps/site/src/app/(site)/privacy/: page.tsx
apps/site/src/app/(site)/sitemap/: page.tsx  sitemap.json
apps/site/src/app/(site)/sitemap/basic/: page.tsx
apps/site/src/app/(site)/terms/: page.tsx
apps/site/src/app/about/: layout.tsx  page.tsx
apps/site/src/app/about/devs/: page.tsx
apps/site/src/app/about/team/: page.tsx
apps/site/src/app/changelog/: page.tsx
apps/site/src/app/login/: page.tsx
apps/site/src/app/register/: page.tsx
apps/site/src/app/terms/: page.tsx
apps/site/src/components/: index.ts  uiClientComponents.ts
apps/site/src/components/global/: ComingSoon.tsx  DocumentContent.tsx  TableOfContents.tsx  uiClientComponents.ts
apps/site/src/components/layout/: Footer.tsx  Header.tsx  Providers.tsx  ToastWrapper.tsx  index.ts
apps/site/src/components/layout/Header/: HeaderBrand.tsx  HeaderButtons.tsx  HeaderLinks.tsx  HeaderMenu.tsx
apps/site/src/constants/policies/: accessibility.mdx  privacy.mdx  terms.mdx
apps/site/src/markdown/policies/: guidelines.mdx
apps/site/src/styles/modules/: doc.module.css
apps/site/src/utils/: apiClient.ts  docsApi.ts  mdxApi.ts
crates/opendevnet-auth/: Cargo.toml
crates/opendevnet-auth/src/: jwt.rs  lib.rs
crates/opendevnet-core/: Cargo.toml
crates/opendevnet-core/src/: lib.rs
crates/opendevnet-user/: Cargo.toml
crates/opendevnet-user/src/: lib.rs  user.rs
libs/api-client/: .eslintrc.js  .eslintrc.yaml  BUILD.bazel  README.md  package.json  project.json  tsconfig.json  vitest.config.ts
libs/api-client/src/: auth.ts  index.ts  users.ts
libs/api-client/src/builders/: Base.ts
libs/api-client/src/typings/: index.ts
libs/tailwind-config/: .eslintrc.js  .eslintrc.yaml  BUILD.bazel  README.md  package.json  project.json  tailwind.config.ts  tsconfig.json
libs/ui/: .eslintrc.js  .eslintrc.yaml  BUILD.bazel  README.md  package.json  project.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
libs/ui/src/: index.tsx  styles.css
libs/ui/src/components/: Accordian.tsx  Alert.tsx  Button.tsx  Checkbox.tsx  Input.tsx  TextArea.tsx  Toc.tsx
libs/ui/src/components/Select/: Select.Dropdown.tsx  Select.tsx
libs/ui/src/components/Toasts/: Toast.tsx  Toasts.tsx
libs/ui/src/styles/: code.css
libs/ui/src/styles/modules/: doc.module.css
libs/ui/src/styles/themes/: default.css
libs/ui/src/typings/: core.ts
libs/utils-server/: .eslintrc.yaml  BUILD.bazel  README.md  package.json  project.json  tsconfig.json  tsup.config.ts  vitest.config.ts
libs/utils-server/src/: config.test.ts  config.ts  mdxApi.test.ts  mdxApi.ts
services/user_service/: Cargo.toml
(+407 files in other folders)
