"""
# DOCS: Bazel module dependencies: see https://bazel.build/external/overview#bzlmod
# This module contains the build rules for Open Dev Net.
"""

module(name = "opendevnet", version = "0.0.0")

# DOCS: https://docs.aspect.build/rulesets/aspect_rules_js/
bazel_dep(name = "aspect_rules_js", version = "1.32.5")

# DOCS: https://docs.aspect.build/rulesets/aspect_bazel_lib/
bazel_dep(name = "aspect_bazel_lib", version = "1.33.0")

# DOCS: https://docs.aspect.build/rulesets/aspect_rules_swc/
bazel_dep(name = "aspect_rules_swc", version = "1.0.2")

# DOCS: https://docs.aspect.build/rulesets/aspect_rules_ts/
bazel_dep(name = "aspect_rules_ts", version = "2.0.0")

# GITHUB: https://github.com/bazelbuild/bazel-skylib
bazel_dep(name = "bazel_skylib", version = "1.4.2")

# bazel_dep(name = "rules_license", version = "0.0.7")

# git_override(
#     module_name = "aspect_rules_js",
#     commit = "9ec233a83bd9c1b6caef1205b01d3de0996de897",
#     remote = "https://github.com/aspect-build/rules_js.git",
# )

# Node.js Version
# DOCS: https://docs.aspect.build/rulesets/rules_nodejs/
bazel_dep(name = "rules_nodejs", version = "5.8.2")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "18.0.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    update_pnpm_lock = 1,
    pnpm_version = "8.10.0",
    data = [
        "@@//:pnpm-workspace.yaml",
        "@@//:package.json",
        "@@//:apps/internal/package.json",
        "@@//:apps/site/package.json",
        "@@//:apps/web/package.json",
        "@@//:libs/api-client/package.json",
        "@@//:libs/eslint-config-odn/package.json",
        "@@//:libs/tailwind-config/package.json",
        "@@//:libs/tsconfig/package.json",
        "@@//:libs/ui/package.json",
        "@@//:libs/utils-client/package.json",
        "@@//:libs/utils-server/package.json",
    ],
)

use_repo(npm, "npm")
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)

use_repo(pnpm, "pnpm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")
