[package]
name = "api"
version = "0.0.0"
edition = "2021"
publish = false
license = "CC-BY-NC-SA-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opendevnet_auth = { path = "../crates/opendevnet-auth" }
opendevnet_user = { path = "../crates/opendevnet-user" }
opendevnet_core = { path = "../crates/opendevnet-core" }
argon2 = "0.5.0"
axum = { version = "0.7.1", features = ["json", "ws"] }
axum-extra = { version = "0.9.0", features = ["cookie", "typed-header"] }
axum-macros = "0.4.0"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
headers = "0.4.0"
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.1.0"
rand_core = { version = "0.6.4", features = ["std"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
  "runtime-async-std-native-tls",
  "postgres",
  "chrono",
  "uuid",
] }
time = "0.3.20"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.20"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["cors", "fs", "trace"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1.0"
