[package]
name = "opendevnet_auth"
version = "0.0.0"
edition = "2021"
publish = false
license = "CC-BY-NC-SA-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opendevnet_core = { path = "../opendevnet-core" }
opendevnet_user = { path = "../opendevnet-user" }
axum = "0.7.1"
axum-extra = { version = "0.9.0", features = ["cookie"] }
base64 = "0.21.5"
chrono = "0.4.31"
jsonwebtoken = "9.1.0"
redis = "0.24.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = "1.6.1"
tracing = "0.1.40"
sqlx = "0.7.3"
