[package]
name = "opendevnet_core"
version = "0.0.0"
edition = "2021"
publish = false
license = "CC-BY-NC-SA-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.3", features = ["tokio-comp"] }
sqlx = { version = "0.7.3", features = ["postgres"] }
tracing = "0.1.40"
