[package]
name = "opendevnet_user"
version = "0.0.0"
edition = "2021"
publish = false
license = "CC-BY-NC-SA-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["uuid", "postgres"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
