load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "ui_ts",
    # srcs = ["src/index.tsx"],
    # Runtime direct dependencies of the linked npm package
    data = [
        ":node_modules/@odnlabs/tailwind-config",
        ":node_modules/@react-icons/all-files",
        ":node_modules/@reduxjs/toolkit",
        ":node_modules/@types/react-dom",
        ":node_modules/react-dom",
        ":node_modules/react-redux",
        ":node_modules/tsup",
    ],
    declaration = True,
    transpiler = "tsc",
    # Transpile time direct dependencies
    deps = [
        ":node_modules/@odnlabs/tsconfig",
        ":node_modules/@types/react",
        ":node_modules/autoprefixer",
        ":node_modules/eslint-config-odn",
        ":node_modules/postcss",
        ":node_modules/react",
        ":node_modules/tailwindcss",
        ":node_modules/tsup",
        ":node_modules/typescript",
    ],
)

# Make this library available via node_modules
npm_package(
    name = "ui",
    srcs = [
        "package.json",
        ":ui_ts",
    ],
    # This is a perf improvement; the default will be flipped to False in rules_js 2.0
    include_runfiles = False,
    visibility = ["//visibility:public"],
)
