# DOCS: https://docs.aspect.build/rulesets/aspect_rules_ts/docs/rules#ts_project
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "src",
    # Will include all TypeScript files by default
    # DOCS: https://docs.aspect.build/rulesets/aspect_rules_ts/docs/rules#srcs-1
    # srcs = ["store.ts"],
    # declaration = True,
    declaration = False,
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = "//apps/site:tsconfig",
    visibility = ["//apps/site:__subpackages__"],
    deps = [
        "//apps/site:node_modules/@types/react",
        "//apps/site:node_modules/@types/react-dom",
        "//apps/site:node_modules/next",
    ],
)
